<resources>
    <string name="app_name">Opentos</string>
    <string name="title_activity_main">Opentos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">User Name</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_usernsme">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="date">Date</string>
    <string name="clinic">Clinic</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="noofcust">No. Of Customers</string>
    <string name="noofservedcust">No. Of Served Customers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="patientname">Patient Name</string>
    <string name="service">Service Name</string>
    <string name="seq">Sequence</string>
    <string name="sessionno">Session No.</string>
    <string name="cost">Cost</string>
    <string name="price">Price</string>
    <string name="cat">Category</string>
    <string name="remain">Remain</string>
    <string name="unitno">Unit No.</string>
    <string name="product">Product Name</string>
    <string name="type">Type</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="balance">Balance</string>
    <string name="credit">Total Credit</string>
    <string name="debit">Total Debit</string>

</resources>
