<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leadLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <LinearLayout
        android:id="@+id/liner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight=".45"
            android:text="@string/balance"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".55"
            android:background="@drawable/border_for_textview"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight=".45"
            android:text="@string/credit"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/credit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".55"
            android:background="@drawable/border_for_textview"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight=".45"
            android:text="@string/debit"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/debit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".55"
            android:background="@drawable/border_for_textview"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>