<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textview7"
            android:hint="@string/date"
            android:textSize="18dp"
            android:layout_weight=".44"
            android:clickable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:id="@+id/textstartdate"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_weight=".56"
            android:drawableRight="@drawable/calender"
            android:editable="false"
            android:focusable="false"
            android:textAlignment="center"
            android:background="@drawable/border_for_textview" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/liner6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:weightSum="1">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            android:hint="@string/clinic"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:layout_weight=".43"/>


            <TextView
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_for_textview"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_weight=".57"/>


            </LinearLayout>

        <LinearLayout
            android:id="@+id/liner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/stime"
                android:hint="@string/starttime"
                android:textSize="18dp"
                android:layout_weight=".43"
                android:clickable="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:id="@+id/textstarttime"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_weight=".57"
                android:drawableRight="@drawable/clock"
                android:editable="false"
                android:focusable="false"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_for_textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/endtime"
                android:hint="@string/endtime"
                android:textSize="18dp"
                android:layout_weight=".43"
                android:clickable="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:id="@+id/textendtime"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_weight=".57"
                android:drawableRight="@drawable/clock"
                android:editable="false"
                android:focusable="false"
                android:textAlignment="center"
                android:background="@drawable/border_for_textview" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:hint="@string/noofcust"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:layout_weight=".75" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_for_textview"
                android:layout_weight=".25"
                android:textAlignment="center" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/liner8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:weightSum="1">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:hint="@string/noofservedcust"
            android:textSize="18dp"
            android:layout_weight=".75"
            android:clickable="true"/>


            <TextView
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_for_textview"
                android:layout_marginBottom="15dp"
                android:layout_weight=".25"
                android:textAlignment="center" />


            </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorAccent"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_labels_textColor="@color/white"
            fab:menu_labels_textSize="16dp"
            fab:menu_labels_colorNormal="#000"

            >
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="210dp"
                android:layout_gravity="bottom|end"
                android:visibility="invisible"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/cancel"
                fab:fab_label="Cancel Appointment"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/colorPrimaryDark" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="140dp"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="@dimen/fab_margin"
                android:visibility="invisible"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/change"
                fab:fab_label="Change Appointment"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/colorPrimaryDark"
                />


        </com.github.clans.fab.FloatingActionMenu>


    </LinearLayout>

</LinearLayout>